# aichallenge-2025

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  autoware-turning.db  docker_build.sh  docker_run.sh  main.py  optuna_minimize_sum_laps.py  packages.txt  pyproject.toml  requirements.txt  sweep.yaml  wandb_agent_supervisor.bash  wandb_minimize_sum_laps.py
aichallenge/: publish.bash  run_evaluation.bash  run_simulator.bash
aichallenge/post/: post.csv
output/: reference.launch.xml.backup
output/20250810-094559/: reference.launch.xml
output/20250810-112957/: reference.launch.xml
output/20250810-113556/: reference.launch.xml
output/20250810-130501/: result-summary.json
output/20250810-145441/: result-summary.json
output/20250810-175013/: result-summary.json
output/20250810-181619/: result-summary.json
output/20250810-220749/: result-summary.json
output/20250811-014436/: result-summary.json
output/artifacts/: reference.1754835803.launch.xml  reference.1754836989.launch.xml  reference.1754837875.launch.xml  reference.1754837894.launch.xml  reference.1754839033.launch.xml  reference.1754839072.launch.xml  reference.1754840012.launch.xml  reference.1754841754.launch.xml  reference.1754842170.launch.xml  reference.1754843188.launch.xml  reference.1754843207.launch.xml  reference.1754843825.launch.xml  reference.1754844361.launch.xml  reference.1754845400.launch.xml  reference.1754845625.launch.xml
output/latest/: 20250808-195947  20250808-200928  20250808-203008  20250808-203217  (+68 more)
vehicle/: try_vcu_reset.py
wandb/: latest-run  settings
(+242 files in other folders)
