[project]
name = "aichallenge-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.1",
    "ecos>=2.0.14",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "numpy==1.26.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.1",
    "wandb>=0.21.1",
]
